# pareto

./: .gitignore  LICENSE  README.md  _config.yml  pyproject.toml
.github/workflows/: lint.yml
docs/: faq.md  judging.md  preflight.md  quickstart.md  results.schema.json  submission.md  tracks.md
examples/: INDEX.md
examples/notebooks/: aerodynamic_modeling.ipynb  algorithm_grover_primer.ipynb  algorithm_hybrid_quantization_primer.ipynb  algorithm_qae_primer.ipynb  algorithm_qite_primer.ipynb  allosteric_simulation.ipynb  autonomous_driving_vla.ipynb  benchmark_chemistry_routes.ipynb  binary_classification_quantum.ipynb  cfd_flow_simulation.ipynb  chemistry_ground_state.ipynb  chemistry_hamiltonian_representations.ipynb  classical_quantum_interaction.ipynb  classical_quantum_roundtrip.ipynb  combinatorial_qubo_optimization.ipynb  conformer_search.ipynb  constrained_param_unitary.ipynb  dense_neural_network_hybrid.ipynb  fraud_detection.ipynb  generative_adversarial_step.ipynb  geometry_optimization.ipynb  getting_started.ipynb  gradient_variance_diagnostic.ipynb  graph_spectral_clustering.ipynb  grid_expansion_planning.ipynb  hardware_aware_dialects.ipynb  hybrid_cpu_gpu_qpu.ipynb  jax_gap_primitives.ipynb  kernel_svm_quantum_feature_map.ipynb  kinetic_eigenmodes_grid.ipynb  large_spin_chain_dynamics.ipynb  least_squares_regression.ipynb  ligand_geometry_optimization.ipynb  low_rank_denoising.ipynb  markov_chain_mixing.ipynb  mcmc_cpu_vs_gpu.ipynb  neb_reaction_path.ipynb  neural_network_training.ipynb  nmr_notebook.ipynb  (+23 more)
scripts/: migrate_auth_cells.py
(+60 files in other folders)
