[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pareto-hackathon"
version = "0.1.0"
description = "ORIQX hackathon track: algorithm x heterogeneous hardware co-design."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ORIQX", email = "support@oriqx.com" }]
keywords = ["hackathon", "hpc", "quantum", "dft", "cfd", "md", "pareto"]

# Runtime dependencies. uniqx itself comes from the private wheel index:
#   pip install --extra-index-url "https://uniqx:${UNIQX_API_KEY}@wheels.oriqx.com/simple/" uniqx
# So we don't pin it here — install it in your environment first, then `pip install -e .`.
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dft = ["pyscf>=2.6"]
cfd = ["scipy>=1.11"]
md  = ["ase>=3.22"]
all = ["pyscf>=2.6", "scipy>=1.11", "ase>=3.22"]
dev = ["ruff>=0.4", "nbqa>=1.8"]

[project.urls]
Homepage   = "https://oriqx.com"
Docs       = "https://app.oriqx.com/docs"
Repository = "https://github.com/oriqx/pareto"

[tool.hatch.build.targets.wheel]
packages = ["tracks"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E741", "F403", "F401", "F841"]
